[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "recover-by"
version = "0.1.0"
description = "Estimate when a Slocum glider will need to be recovered based on battery percentage"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dependencies = [
    "numpy",
    "xarray",
    "scipy",
    "matplotlib",
    "netcdf4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
]

[project.scripts]
recover-by = "SlocumBatteryPercentageDuration:main"

[tool.setuptools]
py-modules = ["SlocumBatteryPercentageDuration"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
